Bolded some text in the info

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     </div>
 
                     <div id="information">
-                        Derived Obsessed Graduate Students (DOGS) is an online junior seminar for graduate students 
-                        working in Derived Categories. The seminar will take place fortnightly on zoom (link coming soon!) 
-                        on Tuesdays from 3pm to 4pm GMT starting the 26th of September 2023. Note however that sometimes 
+                        <b>Derived Obsessed Graduate Students</b> (DOGS) is an online junior seminar for graduate students 
+                        working in Derived Categories. The seminar will take place <b>fortnightly on Zoom</b> (link coming soon!) 
+                        on <b>Tuesdays from 3pm to 4pm GMT</b> starting the <b>26th of September 2023</b>. Note however that sometimes 
                         speakers may do a second talk in the subsequent week in support of their first more introductory 
                         talk.
                         <br><br>
@@ -60,7 +60,7 @@
                         what we've learnt so far in our PhD. This is because the fastest and best way to learn is to 
                         have someone who has spent hours learning something explain it to you! 
                         If you'd like to speak or have any other questions, please contact Michela Barbieri 
-                        (michela.barbieri.21@ucl.ac.uk).
+                        (michela.barbieri.21@ucl.ac.uk) or Aporva Varshney (aporva.varshney.22@ucl.ac.uk).
                     </div>
                 </div>
                 
