--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
         </div>
 
         <div id="img-separator-1"></div>
-
+        <div id="next-talk">
+            <div class="content">
+                <h2>Schedule Coming Soon!</h2>
+            </div>
+        </div>
+        <!--
         <div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2>
@@ -153,7 +158,7 @@
                 </div>
 
             </div>
-        </div>
+        </div>-->
     </body>
     
 </html>
