--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div id="img-separator-1"></div>
         <div id="next-talk">
             <div class="content">
-                <h2>Schedule Coming Soon!</h2>
+                <h2 style="line-height: 1.5em;">Schedule Coming Soon!</h2>
             </div>
         </div>
         <!--
