--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div id="information">
                         <b>Derived Obsessed Graduate Students</b> (DOGS) is an online junior seminar for graduate students 
                         working in Derived Categories. The seminar will take place <b>fortnightly on Zoom</b> (link coming soon!) 
-                        on <b>Tuesdays from 3pm to 4pm GMT</b> starting the <b>26th of September 2023</b>. Note however that sometimes 
+                        on <b>Tuesdays from 3pm to 4pm</b> (London time) starting the <b>26th of September 2023</b>. Note however that sometimes 
                         speakers may do a second talk in the subsequent week in support of their first more introductory 
                         talk.
                         <br><br>
@@ -74,36 +74,10 @@
         <div id="img-separator-1"></div>
         <div id="next-talk">
             <div class="content">
-                <h2 style="line-height: 1.5em;">Schedule Coming Soon!</h2>
-            </div>
-        </div>
-        <!--
-        <div id="next-talk">
-            <div class="content">
                 <h2>Next Talk</h2>
 
-                <div id="next-talk-box" class="details-box">
-                    <div class="cal">
-                        <div class="month">January</div>
-                        <div class="date">1</div>
-                        <div class="time">2pm - 3pm</div>
-                    </div>
-                    <div class="details">
-                        <div class="title">
-                            <h3>How much chuck could a wood chuck chuck if a wood chuck could chuck wood?
-                            </h3>
-                        </div>
+                <div id="next-talk-box">
 
-                        <div class="speaker">
-                            Aporva Varshney, UCL
-                        </div>
-
-                        <div class="abstract">
-                            In this talk, we aim to answer the age old question of how much chuck a wood chuck could chuck if a
-                             wood chuck could chuck wood. In order to do this, we will first review the basic theory of wood 
-                             chucking. If time permits, we will consider other chuckable goods.
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -114,51 +88,44 @@
             <div class="content">
                 <h2>Full Schedule</h2>
 
-                <div class="details-box">
+                <div class="details-box" id="next-talk-selector">
                     <div class="cal">
-                        <div class="month">January</div>
-                        <div class="date">1</div>
-                        <div class="time">2pm - 3pm</div>
+                        <div class="month">September</div>
+                        <div class="date">26</div>
+                        <div class="time">3pm - 4pm</div>
                     </div>
                     <div class="details">
                         <div class="title">
-                            <h3>Title Goes Here</h3>
+                            <h3>Derived Categories of Nodal Varieties
+                            </h3>
                         </div>
 
                         <div class="speaker">
-                            Speaker Goes Here
+                            Aporva Varshney, UCL
                         </div>
 
                         <div class="abstract">
-                            Abstract goes here
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="details-box">
-                    <div class="cal">
-                        <div class="month">January</div>
-                        <div class="date">1</div>
-                        <div class="time">2pm - 3pm</div>
-                    </div>
-                    <div class="details">
-                        <div class="title">
-                            <h3>Title Goes Here</h3>
-                        </div>
-
-                        <div class="speaker">
-                            Speaker Goes Here
-                        </div>
-
-                        <div class="abstract">
-                            Abstract goes here
+                            It can be daunting to leave the warm, cosy duvet of smooth varieties, no matter 
+                            how much the minimal model program may tempt us. In this talk, we will take small steps by looking 
+                            at nodal varieties.
+                            We will see how, at the level of the derived category, nodal singularities can sometimes 
+                            be "absorbed" by producing a semiorthogonal decomposition into a "singular" component and 
+                            a "smooth" component.
+                            Even more amazingly, we'll then see how for curves and threefolds admitting this kind of 
+                            absorption, the singular component in the decomposition vanishes when smoothing the variety.
                         </div>
                     </div>
                 </div>
 
             </div>
-        </div>-->
+        </div>
     </body>
+
+    <script>
+        const node = document.getElementById("next-talk-selector");
+        const clone = node.cloneNode(true);
+
+        document.getElementById("next-talk-box").appendChild(clone); 
+    </script>
     
 </html>
