Updated abstract for 26 Sept 2023

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
                         <div class="abstract">
                             It can be daunting to leave the warm, cosy duvet of smooth varieties, no matter 
-                            how much the minimal model program may tempt us. In this talk, we will take small steps by looking 
-                            at nodal varieties.
+                            how much the minimal model program may tempt us. In this talk, we will take small steps by 
+                            looking at nodal varieties using recent results of Kuzentsov-Shinder.
                             We will see how, at the level of the derived category, nodal singularities can sometimes 
                             be "absorbed" by producing a semiorthogonal decomposition into a "singular" component and 
                             a "smooth" component.
-                            Even more amazingly, we'll then see how for curves and threefolds admitting this kind of 
+                            I will then sketch an argument showing that for curves and threefolds admitting this kind of 
                             absorption, the singular component in the decomposition vanishes when smoothing the variety.
                         </div>
                     </div>
