Updated abstract for 26 Sept 2023

--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
                             We will see how, at the level of the derived category, nodal singularities can sometimes 
                             be "absorbed" by producing a semiorthogonal decomposition into a "singular" component and 
                             a "smooth" component.
-                            I will then sketch an argument showing that for curves and threefolds admitting this kind of 
-                            absorption, the singular component in the decomposition vanishes when smoothing the variety.
+                            I will then sketch a proof of a very cool result which shows that for curves and threefolds 
+                            admitting this kind of absorption, the singular component in the decomposition vanishes when 
+                            smoothing the variety.
                         </div>
                     </div>
                 </div>
