--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <div id="img-separator-1"></div>
-        <div id="next-talk">
+        <!--<div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2>
 
@@ -80,13 +80,11 @@
 
                 </div>
             </div>
-        </div>
+        </div>-->
 
-        <div id="img-separator-2"></div>
-
-        <div id="schedule">
+        <div id="next-talk">
             <div class="content">
-                <h2>Full Schedule</h2>
+                <h2>Schedule</h2>
 
                 <div class="details-box" id="next-talk-selector">
                     <div class="cal">
@@ -120,13 +118,15 @@
 
             </div>
         </div>
+
+        <div id="img-separator-2"></div>
     </body>
 
     <script>
-        const node = document.getElementById("next-talk-selector");
-        const clone = node.cloneNode(true);
+        //const node = document.getElementById("next-talk-selector");
+        //const clone = node.cloneNode(true);
 
-        document.getElementById("next-talk-box").appendChild(clone); 
+        //document.getElementById("next-talk-box").appendChild(clone); 
     </script>
     
 </html>
