--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="abstract">
                             It can be daunting to leave the warm, cosy duvet of smooth varieties, no matter 
                             how much the minimal model program may tempt us. In this talk, we will take small steps by 
-                            looking at nodal varieties using recent results of Kuzentsov-Shinder.
+                            looking at nodal varieties using recent results of Kuznetsov-Shinder.
                             We will see how, at the level of the derived category, nodal singularities can sometimes 
                             be "absorbed" by producing a semiorthogonal decomposition into a "singular" component and 
                             a "smooth" component.
