--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
 
                     <div id="information">
                         <b>Derived Obsessed Graduate Students</b> (DOGS) is an online junior seminar for graduate students 
-                        working in Derived Categories. The seminar will take place <b>fortnightly on Zoom</b> (link coming soon!) 
-                        on <b>Tuesdays from 3pm to 4pm</b> (London time) starting the <b>26th of September 2023</b>. Note however that sometimes 
-                        speakers may do a second talk in the subsequent week in support of their first more introductory 
+                        working in Derived Categories. The seminar will take place <b>fortnightly on Zoom</b>
+                        (link: <a href="https://ucl.zoom.us/j/95256182114">https://ucl.zoom.us/j/95256182114 </a>)
+                        on <b>Tuesdays from 3pm to 4pm (London time)</b> starting the <b>26th of September 2023</b>. Note however 
+                        that sometimes speakers may do a second talk in the subsequent week in support of their first more introductory 
                         talk.
                         <br><br>
                         The goal of this seminar, above all, is to be useful to its audience. Rather than a more 
