Added notes for talk on 26th Sept

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                             admitting this kind of absorption, the singular component in the decomposition vanishes when 
                             smoothing the variety.
                         </div>
+
+                        <div class="notes">
+                            <a href="notes/dogs-26_09_23.pdf">Notes</a>
+                        </div>
                     </div>
                 </div>
 
