Added abstract for next talk on 3rd oct; added message for mailing list

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                         have someone who has spent hours learning something explain it to you! 
                         If you'd like to speak or have any other questions, please contact Michela Barbieri 
                         (michela.barbieri.21@ucl.ac.uk) or Aporva Varshney (aporva.varshney.22@ucl.ac.uk).
+
+                        <br><br>
+                        <b>If you'd like to receive talk announcements, please email michela.barbieri.21@ucl.ac.uk with 
+                        'I'd like to be signed up to the DOGS mailing list'.</b>
                     </div>
                 </div>
                 
@@ -73,21 +77,48 @@
         </div>
 
         <div id="img-separator-1"></div>
-        <!--<div id="next-talk">
+        <div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2>
 
-                <div id="next-talk-box">
+                
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">October</div>
+                        <div class="date">03</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>Derived Categories of Nodal Varieties II
+                            </h3>
+                        </div>
 
+                        <div class="speaker">
+                            Aporva Varshney, UCL
+                        </div>
+
+                        <div class="abstract">
+                            Following on from the previous talk, I'll firstly answer any questions
+                            about things I explained badly last week. We will then look at the specific example of 
+                            a surface given by the cone over a conic, which has a nodal singularity.
+                            This variety admits a resolution by a ruled surface; by explicitly computing 
+                            the maps between line bundles on this surface, we'll see how the semiorthogonal decomposition
+                            for the nodal surface into a smooth and singular component is induced by one on the resolution.
+                            We will use this to derive a categorical resolution for our absorbing category.
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>-->
+        </div>
 
-        <div id="next-talk">
+        <div id="img-separator-2"></div>
+
+        <div>
             <div class="content">
-                <h2>Schedule</h2>
+                <h2>Past Talks</h2>
 
-                <div class="details-box" id="next-talk-selector">
+                <div class="details-box">
                     <div class="cal">
                         <div class="month">September</div>
                         <div class="date">26</div>
@@ -123,8 +154,6 @@
 
             </div>
         </div>
-
-        <div id="img-separator-2"></div>
     </body>
 
     <script>
