Talk details for 10 oct 23

--- a/index.html
+++ b/index.html
@@ -81,7 +81,38 @@
             <div class="content">
                 <h2>Next Talk</h2>
 
-                
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">October</div>
+                        <div class="date">10</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>A tour of the McKay correspondence
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Austin Hubbard, University of Bath
+                        </div>
+
+                        <div class="abstract">
+                            The classical McKay correspondence is a great example of a deep geometric connection realised 
+                            as an equivalence of derived categories. We will discuss the classical 
+                            case and various generalisations. 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div>
+            <div class="content">
+                <h2>Past Talks</h2>
+
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">October</div>
@@ -109,14 +140,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div>
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
