Added notes for talk on 10th Oct 23

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
                             as an equivalence of derived categories. We will discuss the classical 
                             case and various generalisations. 
                         </div>
+
+                        <div class="notes">
+                            <a href="notes/dogs-10_10_23.pdf">Notes</a>
+                        </div>
                     </div>
                 </div>
             </div>
