Added Q&A session for 17th Oct 23

--- a/index.html
+++ b/index.html
@@ -84,6 +84,40 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">October</div>
+                        <div class="date">17</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>A tour of the McKay correspondence: Q&A Session
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Austin Hubbard, University of Bath
+                        </div>
+
+                        <div class="abstract">
+                            A Q&A session following on from the previous talk!
+                        </div>
+
+                        <div class="notes">
+                            <a href="notes/dogs-10_10_23.pdf">Notes from talk</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div>
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">October</div>
                         <div class="date">10</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -108,14 +142,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div>
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
@@ -125,7 +151,7 @@
                     </div>
                     <div class="details">
                         <div class="title">
-                            <h3>Derived Categories of Nodal Varieties II
+                            <h3>Derived Categories of Nodal Varieties: Q&A
                             </h3>
                         </div>
 
@@ -134,13 +160,7 @@
                         </div>
 
                         <div class="abstract">
-                            Following on from the previous talk, I'll firstly answer any questions
-                            about things I explained badly last week. We will then look at the specific example of 
-                            a surface given by the cone over a conic, which has a nodal singularity.
-                            This variety admits a resolution by a ruled surface; by explicitly computing 
-                            the maps between line bundles on this surface, we'll see how the semiorthogonal decomposition
-                            for the nodal surface into a smooth and singular component is induced by one on the resolution.
-                            We will use this to derive a categorical resolution for our absorbing category.
+                            Q&A session for the previous talk.
                         </div>
                     </div>
                 </div>
