Talk details for 24 Oct

--- a/index.html
+++ b/index.html
@@ -84,6 +84,49 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">October</div>
+                        <div class="date">24</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>Fourier-Mukai transforms on Jacobians and Pryms
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Robert Hanson, Instituto Superior Técnico
+                        </div>
+
+                        <div class="abstract">
+                            Shigeru Mukai has constructed certain derived equivalences between an 
+                            abelian variety $A$ and its dual $A^{\vee}$. These equivalences are 
+                            called Fourier-Mukai transforms, named so for their similarity to the 
+                            classical Fourier transform on $L^2$ spaces. Given a smooth curve $C$, 
+                            one gets a derived autoequivalence on the Jacobian $A = A^{\vee} = Jac(C)$, 
+                            and given a finite morphism of smooth curves $\beta : C \to X$, one gets 
+                            a derived equivalence between the Prym variety $A = Prym(\beta)$ and 
+                            the GIT quotient $A^{\vee} = Prym(\beta) / \Gamma$, where $\Gamma$ is a 
+                            group of torsion line bundles on $X$. Motivated by mirror symmetry and 
+                            geometric Langlands, this talk explores extensions of these derived 
+                            equivalences to cases where $C$ is singular and we compactify the 
+                            Jacobians and Pryms. This is based on joint work with Emilio Franco and 
+                            Joao Ruano in our preprint arXiv 2206.12349.
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div>
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">October</div>
                         <div class="date">17</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -100,20 +143,8 @@
                         <div class="abstract">
                             A Q&A session following on from the previous talk!
                         </div>
-
-                        <div class="notes">
-                            <a href="notes/dogs-10_10_23.pdf">Notes from talk</a>
-                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div>
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
@@ -160,7 +191,7 @@
                         </div>
 
                         <div class="abstract">
-                            Q&A session for the previous talk.
+                            A Q&A session following on from the previous talk!
                         </div>
                     </div>
                 </div>
