Added mathjax support

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/style.css">
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
     <body>
         <div id="header">
@@ -99,16 +100,16 @@
 
                         <div class="abstract">
                             Shigeru Mukai has constructed certain derived equivalences between an 
-                            abelian variety $A$ and its dual $A^{\vee}$. These equivalences are 
+                            abelian variety \(A\) and its dual \(A^{\vee}\). These equivalences are 
                             called Fourier-Mukai transforms, named so for their similarity to the 
-                            classical Fourier transform on $L^2$ spaces. Given a smooth curve $C$, 
-                            one gets a derived autoequivalence on the Jacobian $A = A^{\vee} = Jac(C)$, 
-                            and given a finite morphism of smooth curves $\beta : C \to X$, one gets 
-                            a derived equivalence between the Prym variety $A = Prym(\beta)$ and 
-                            the GIT quotient $A^{\vee} = Prym(\beta) / \Gamma$, where $\Gamma$ is a 
-                            group of torsion line bundles on $X$. Motivated by mirror symmetry and 
+                            classical Fourier transform on \(L^2\) spaces. Given a smooth curve \(C\), 
+                            one gets a derived autoequivalence on the Jacobian \(A = A^{\vee} = Jac(C)\), 
+                            and given a finite morphism of smooth curves \(\beta : C \to X\), one gets 
+                            a derived equivalence between the Prym variety \(A = Prym(\beta)\) and 
+                            the GIT quotient \(A^{\vee} = Prym(\beta) / \Gamma\), where \(\Gamma\) is a 
+                            group of torsion line bundles on \(X\). Motivated by mirror symmetry and 
                             geometric Langlands, this talk explores extensions of these derived 
-                            equivalences to cases where $C$ is singular and we compactify the 
+                            equivalences to cases where \(C\) is singular and we compactify the 
                             Jacobians and Pryms. This is based on joint work with Emilio Franco and 
                             Joao Ruano in our preprint arXiv 2206.12349.
                         </div>
