Added mailing list

--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
                         (michela.barbieri.21@ucl.ac.uk) or Aporva Varshney (aporva.varshney.22@ucl.ac.uk).
 
                         <br><br>
-                        <b>If you'd like to receive talk announcements, please email michela.barbieri.21@ucl.ac.uk with 
-                        'I'd like to be signed up to the DOGS mailing list'.</b>
+                        If you'd like to receive talk announcements, please email <b>derivedobsessed-join@ucl.ac.uk</b>
+                        to sign up to the mailing list. 
+
+                        If you'd like to unsubscribe, please email
+                        <b>derivedobsessed-leave@ucl.ac.uk</b>. Note both the Subject: header and body of such a message are ignored.</b>
                     </div>
                 </div>
                 
