Added notes for talk on 24-10-23

--- a/index.html
+++ b/index.html
@@ -88,6 +88,38 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">October</div>
+                        <div class="date">31</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>Fourier-Mukai transforms on Jacobians and Pryms: Q&A 
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Robert Hanson, Instituto Superior Técnico
+                        </div>
+
+                        <div class="abstract">
+                            A Q&A session following on from the previous talk!
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div>
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">October</div>
                         <div class="date">24</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -116,17 +148,12 @@
                             Jacobians and Pryms. This is based on joint work with Emilio Franco and 
                             Joao Ruano in our preprint arXiv 2206.12349.
                         </div>
+
+                        <div class="notes">
+                            <a href="notes/dogs-24_10_23.pdf">Notes</a>
+                        </div>
                     </div>
                 </div>
-
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div>
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
@@ -136,7 +163,7 @@
                     </div>
                     <div class="details">
                         <div class="title">
-                            <h3>A tour of the McKay correspondence: Q&A Session
+                            <h3>A tour of the McKay correspondence: Q&A
                             </h3>
                         </div>
 
