Talk details for 7th Nov

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
                         <b>Derived Obsessed Graduate Students</b> (DOGS) is an online junior seminar for graduate students 
                         working in Derived Categories. The seminar will take place <b>fortnightly on Zoom</b>
                         (link: <a href="https://ucl.zoom.us/j/95256182114">https://ucl.zoom.us/j/95256182114 </a>)
-                        on <b>Tuesdays from 3pm to 4pm (London time)</b> starting the <b>26th of September 2023</b>. Note however 
-                        that sometimes speakers may do a second talk in the subsequent week in support of their first more introductory 
-                        talk.
+                        on <b>Tuesdays from 3pm to 4pm (London time)</b>.
                         <br><br>
                         The goal of this seminar, above all, is to be useful to its audience. Rather than a more 
                         research-oriented seminar, we hope this seminar to be a place where we can teach each other 
@@ -87,6 +85,43 @@
 
                 <div class="details-box">
                     <div class="cal">
+                        <div class="month">November</div>
+                        <div class="date">7</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>…a big fan of your heart
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Parth Shimpi, University of Glasgow
+                        </div>
+
+                        <div class="abstract">
+                            Just like dogs, the derived categories of finite dimensional 
+                            algebras have hearts. Unlike dogs, a single category can have 
+                            many hearts. Fortunately the zoo of hearts is not completely 
+                            unclassifiable— in this talk I will describe various ways 
+                            to classify hearts, first homologically by detecting various 
+                            shadows in the module category itself, and then combinatorially 
+                            much like how fans classify toric varieties. 
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div>
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
                         <div class="month">October</div>
                         <div class="date">31</div>
                         <div class="time">3pm - 4pm</div>
@@ -107,14 +142,6 @@
                     </div>
                 </div>
 
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div>
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 
                 <div class="details-box">
