--- a/index.html
+++ b/index.html
@@ -86,6 +86,37 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">November</div>
+                        <div class="date">21</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>TBA
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            TBA
+                        </div>
+
+                        <div class="abstract">
+                            
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div>
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">November</div>
                         <div class="date">7</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -114,15 +145,6 @@
                         </div>
                     </div>
                 </div>
-
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div>
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
