Added talk details for 21st Nov

--- a/index.html
+++ b/index.html
@@ -91,16 +91,18 @@
                     </div>
                     <div class="details">
                         <div class="title">
-                            <h3>TBA
+                            <h3>Demystifying Bridgeland stability conditions
                             </h3>
                         </div>
 
                         <div class="speaker">
-                            TBA
+                            Hannah Dell, University of Edinburgh
                         </div>
 
                         <div class="abstract">
-                            
+                            Bridgeland stability conditions have proved to be a useful tool in algebraic geometry and beyond. 
+                            However, if one looks at the definition, the connection to geometry can seem quite mysterious. 
+                            In this talk, I will introduce them and present some examples and applications.
                         </div>
                     </div>
                 </div>
