Added notes for 21-11-23

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
                         <div class="abstract">
                             A Q&A session following on from the previous talk!
                         </div>
+
+                        <div class="notes">
+                            <a href="notes/dogs-21_11_23.pdf">Notes from talk</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -133,6 +137,10 @@
                             Bridgeland stability conditions have proved to be a useful tool in algebraic geometry and beyond. 
                             However, if one looks at the definition, the connection to geometry can seem quite mysterious. 
                             In this talk, I will introduce them and present some examples and applications.
+                        </div>
+
+                        <div class="notes">
+                            <a href="notes/dogs-21_11_23.pdf">Notes</a>
                         </div>
                     </div>
                 </div>
