Added notes from 28/11/23

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                     <div id="information">
                         <b>Derived Obsessed Graduate Students</b> (DOGS) is an online junior seminar for graduate students 
-                        working in Derived Categories. The seminar will take place <b>fortnightly on Zoom</b>
+                        working in Derived Categories. The seminar takes place <b>fortnightly on Zoom</b>
                         (link: <a href="https://ucl.zoom.us/j/95256182114">https://ucl.zoom.us/j/95256182114 </a>)
                         on <b>Tuesdays from 3pm to 4pm (London time)</b>.
                         <br><br>
@@ -68,6 +68,11 @@
 
                         If you'd like to unsubscribe, please email
                         <b>derivedobsessed-leave@ucl.ac.uk</b>. Note both the Subject: header and body of such a message are ignored.</b>
+
+
+                    <h2>
+                        DOGS is on Christmas break. See you all in January!
+                    </h2>
                     </div>
                 </div>
                 
@@ -79,9 +84,18 @@
         </div>
 
         <div id="img-separator-1"></div>
+
+        <!--<div id="next-talk">
+            <div class="content">
+                <h2>Next Talk</h2> 
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div> -->
+
         <div id="next-talk">
             <div class="content">
-                <h2>Next Talk</h2>
+                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
@@ -104,18 +118,10 @@
                         </div>
 
                         <div class="notes">
-                            <a href="notes/dogs-21_11_23.pdf">Notes from talk</a>
+                            <a href="notes/dogs-28_11_23.pdf">Notes from Q&A</a>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div>
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
