--- a/index.html
+++ b/index.html
@@ -68,11 +68,6 @@
 
                         If you'd like to unsubscribe, please email
                         <b>derivedobsessed-leave@ucl.ac.uk</b>. Note both the Subject: header and body of such a message are ignored.</b>
-
-
-                    <h2>
-                        DOGS is on Christmas break. See you all in January!
-                    </h2>
                     </div>
                 </div>
                 
@@ -85,15 +80,42 @@
 
         <div id="img-separator-1"></div>
 
-        <!--<div id="next-talk">
+        <div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2> 
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">January</div>
+                        <div class="date">16</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>Fourier-Mukai transforms
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Luke Naylor, University of Edinburgh
+                        </div>
+
+                        <div class="abstract">
+                            Shigeru Mukai first introduced a "Fourier functor" in the 80s, now known as the Fourier-Mukai transform, which has since been used extensively for derived equivalences in algebraic geometry. In this talk, I will cover some material around the following topics:
+                            <ul>
+                                <li> Where does the "Fourier" come from? </li>
+                                <li> Some homological algebra around the definition and early propositions </li>
+                                <li> Some roles it plays in algebraic geometry </li>
+                            </ul>
+                        </div>  
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div id="img-separator-2"></div> -->
+        <div id="img-separator-2"></div>
 
-        <div id="next-talk">
+        <div id="schedule">
             <div class="content">
                 <h2>Past Talks</h2>
 
