Added notes for 16/01/24

--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
                                 <li> Some roles it plays in algebraic geometry </li>
                             </ul>
                         </div>  
+
+                        <div class="notes">
+                            <a href="https://uoe-my.sharepoint.com/:o:/g/personal/s1511002_ed_ac_uk/EhVRcACFsOJGlB1klZsfnz4BxeE0d-tGYcdjavtTi0iwug?e=R8rAHl">
+                                Notes</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -373,6 +378,12 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+
+        <div class="footer">
+            <div class="content">
+                Website made by Aporva Varshney.
             </div>
         </div>
     </body>
