Added q&a 23rd jan

--- a/index.html
+++ b/index.html
@@ -87,6 +87,42 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">January</div>
+                        <div class="date">23</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>Fourier-Mukai transforms: Q&A
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Luke Naylor, University of Edinburgh
+                        </div>
+
+                        <div class="abstract">
+                            A Q&A session following on from the previous talk!
+                        </div>  
+
+                        <div class="notes">
+                            <a href="https://uoe-my.sharepoint.com/:o:/g/personal/s1511002_ed_ac_uk/EhVRcACFsOJGlB1klZsfnz4BxeE0d-tGYcdjavtTi0iwug?e=R8rAHl">
+                                Notes from the talk</a>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">January</div>
                         <div class="date">16</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -115,14 +151,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
