--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
                         </div>  
 
                         <div class="notes">
-                            <a href="https://uoe-my.sharepoint.com/:o:/g/personal/s1511002_ed_ac_uk/EhVRcACFsOJGlB1klZsfnz4BxeE0d-tGYcdjavtTi0iwug?e=R8rAHl">
-                                Notes from the talk</a>
+                            <a href="notes/dogs-23_01_24.pdf">Notes</a>
                         </div>
                     </div>
                 </div>
