Added details for talk on 30th Jan 2024

--- a/index.html
+++ b/index.html
@@ -87,6 +87,51 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">January</div>
+                        <div class="date">30</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>Higher coherences/infinity categories pop up naturally in Algebraic geometry
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Omer Bojan, Tel Aviv University
+                        </div>
+
+                        <div class="abstract">
+                            In this talk I hope to convince you these are intuitive objects
+                            using repetitive topological slogans, examples, and deceitful charm.
+
+                            Plan:
+                            <ol>
+                                <li>Infinity sheaves (Stacks, moduli spaces...)</li>
+                                <li>Stable categories</li>
+                                <li>Coherent group actions, and more</li>
+                            </ol>
+                        </div>  
+
+                        <!--
+                        <div class="notes">
+                            <a href="notes/dogs-30_01_24.pdf">Notes</a>
+                        </div>-->
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">January</div>
                         <div class="date">23</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -109,15 +154,6 @@
                         </div>
                     </div>
                 </div>
-                
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
